--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -125,12 +125,21 @@ p:empty::before {
     overflow: hidden;
 }
 
-.blog .site-wrapper,
-.home-page .site-wrapper {
-    margin-top: 15px;
+.site-wrapper {
+    margin: 1rem 0;
+}
+
+.site-wrapper #item-header {
+    margin-top: -1rem;
 }
 
 @media (min-width: 768px) {
+    .site-wrapper {
+        margin: 2rem 0;
+    }
+    .site-wrapper #item-header {
+        margin-top: -2rem;
+    }
     #primary,
     .site-wrapper {
         min-height: calc(100vh - 190px);
@@ -472,10 +481,7 @@ input[type="submit"]:focus {
     border-color: #aaa #bbb #bbb;
 }
 
-button:focus-visible,
-input[type="button"]:focus-visible,
-input[type="reset"]:focus-visible,
-input[type="submit"]:focus-visible {
+button:focus-visible {
     outline: 2px solid black;
 }
 
@@ -519,25 +525,6 @@ input[type="datetime-local"]:focus,
 input[type="color"]:focus,
 textarea:focus {
     color: #111;
-}
-
-input[type="text"]:focus-visible,
-input[type="email"]:focus-visible,
-input[type="url"]:focus-visible,
-input[type="password"]:focus-visible,
-input[type="search"]:focus-visible,
-input[type="number"]:focus-visible,
-input[type="tel"]:focus-visible,
-input[type="range"]:focus-visible,
-input[type="date"]:focus-visible,
-input[type="month"]:focus-visible,
-input[type="week"]:focus-visible,
-input[type="time"]:focus-visible,
-input[type="datetime"]:focus-visible,
-input[type="datetime-local"]:focus-visible,
-input[type="color"]:focus-visible,
-textarea:focus-visible {
-    outline: 2px solid black;
 }
 
 a.menu-close:focus-visible {
@@ -883,10 +870,12 @@ body.admin-bar .site-header-wrapper.has-sticky-header {
     .main-navigation ul.menu ul li {
         padding-left: 0;
     }
-    #primary-menu .sub-menu {
+    #primary-menu .sub-menu,
+    .mobile-user-profile-menu .sub-menu {
         display: none;
     }
-    #primary-menu .sub-menu.toggle-show {
+    #primary-menu .sub-menu.toggle-show,
+    .mobile-user-profile-menu .sub-menu.toggle-show {
         display: block;
     }
     .main-navigation ul.menu li+li {
