--- a/assets/css/learnpress.css
+++ b/assets/css/learnpress.css
@@ -17,8 +17,16 @@
 # Archive Course
 --------------------------------------------------------------*/
 
+.lp-archive-courses {
+    margin-top: 2rem;
+}
+
+.single .lp-archive-courses {
+    margin-top: 0;
+}
+
 .post-type-archive-lp_course .site-sub-header h2.entry-title a {
-    color: #ffffff;
+    color: #fff;
 }
 
 .learn-press-breadcrumb,
@@ -31,24 +39,6 @@
     right: 5px;
     bottom: 5px;
     padding: 10px 20px;
-}
-
-ul.learn-press-courses .course {
-    border: 1px solid #e5e5e5;
-    background: #ffffff;
-    padding-bottom: 60px !important;
-    position: relative;
-    -webkit-transition: all .2s ease-in-out;
-    -khtml-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -ms-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-ul.learn-press-courses .course:hover {
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.13);
-    ;
 }
 
 .lp_course.course a {
@@ -64,11 +54,6 @@ ul.learn-press-courses .course:hover {
 
 .lp_course.course .course-thumbnail img {
     width: 100%;
-    -webkit-transition: all .5s ease-in-out;
-    -khtml-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -ms-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
 }
 
@@ -81,30 +66,14 @@ ul.learn-press-courses .course:hover {
     bottom: 0;
     z-index: 2;
     background: rgba(0, 0, 0, .5);
-    -webkit-transition: all .3s;
-    -khtml-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
     transition: all .3s;
     filter: alpha(opacity=0);
-    -ms-filter: "alpha(opacity=0)";
-    -webkit-opacity: 0;
-    -khtml-opacity: 0;
-    -moz-opacity: 0;
-    -ms-opacity: 0;
-    -o-opacity: 0;
     opacity: 0;
 }
 
 .lp_course.course:hover .course-thumbnail:before {
     filter: alpha(opacity=100);
     -ms-filter: "alpha(opacity=100)";
-    -webkit-opacity: 1;
-    -khtml-opacity: 1;
-    -moz-opacity: 1;
-    -ms-opacity: 1;
-    -o-opacity: 1;
     opacity: 1;
 }
 
@@ -113,24 +82,16 @@ ul.learn-press-courses .course:hover {
 }
 
 ul.learn-press-courses .course h3.course-title {
-    text-align: center;
     line-height: normal;
     padding: 0 12px;
 }
 
-ul.learn-press-courses .course .course-info {
-    overflow: hidden;
-    position: absolute;
-    padding: 15px 12px;
-    margin: 0 !important;
-    display: block;
-    bottom: 0;
-    width: 100%;
-    border-top: 1px solid #e5e5e5;
-}
-
 .course-price {
     font-weight: bold;
+}
+
+.lp-archive-courses .learn-press-courses[data-layout="list"] .course {
+    background: #fff;
 }
 
 ul.learn-press-courses .course .course-info .course-price .origin-price,
@@ -154,6 +115,15 @@ ul.learn-press-courses .course .course-info .course-instructor a {
 /*--------------------------------------------------------------
 # Single Course
 --------------------------------------------------------------*/
+
+.lp-archive-courses .course-summary .course-summary-content .course-detail-info.course-detail-info {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.lp-archive-courses .course-summary .course-summary-content .lp-entry-content.lp-content-area .course-summary-sidebar {
+    margin-right: 15px;
+}
 
 .single-lp_course .course-learning-summary .course-meta,
 .course-students {
@@ -253,16 +223,12 @@ ul.learn-press-nav-tabs .course-nav a:after {
 }
 
 #learn-press-course-tabs .course-tab-panel {
-    background: #ffffff;
+    background: #fff;
     border: 1px solid #e8e8e8;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: 0px 8px 8px 8px;
     overflow: hidden;
     padding: 1em 1.2em;
-}
-
-.learnpress-page .lp-course-buttons .lp-button {
-    padding: 0 30px;
 }
 
 .lp-single-course .course-price {
@@ -482,7 +448,7 @@ ul.learn-press-nav-tabs .course-nav a:after {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: 8px;
     margin-top: 1em;
-    background: #ffffff;
+    background: #fff;
 }
 
 #learn-press-user-profile #learn-press-profile-header {
@@ -588,7 +554,7 @@ ul.learn-press-nav-tabs .course-nav a:after {
 }
 
 #learn-press-profile-nav .tabs>li.active>a {
-    background: #ffffff !important;
+    background: #fff !important;
 }
 
 .lp-sub-menu {
@@ -680,10 +646,6 @@ ul.learn-press-nav-tabs .course-nav a:after {
     #course-item-content-header .course-title {
         font-size: 15px !important;
     }
-    /* body.course-item-popup.wpadminbar #learn-press-content-item,
-    body.course-item-popup.wpadminbar #learn-press-course-curriculum {
-        top: 167px !important;
-    } */
     #course-item-content-header,
     #course-item-content-footer {
         height: auto !important;
@@ -705,9 +667,6 @@ ul.learn-press-nav-tabs .course-nav a:after {
     .full-screen-content-item .content-item-wrap {
         padding-top: 120px;
     }
-    /* body.course-item-popup.full-screen-content-item #course-item-content-header .course-item-search {
-        display: block !important;
-    } */
     #course-item-content-header .course-title {
         width: calc(100% - 215px);
         white-space: nowrap;
